--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title id="title">Sleep Outside | Cedar Ridge Rimrock 2-person tent</title>
+    <title>Sleep Outside | Cedar Ridge Rimrock 2-person tent</title>
 
     <link rel="stylesheet" href="../css/style.css" />
 
