--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -53,6 +53,11 @@
           </li> -->
         </ul>
       </section>
+
+      <div class="cart-footer hide">
+        <p class="cart-total">Total:</p>
+        <a href="/checkout/index.html">Checkout</a>
+      </div>
     </main>
 
     <footer id="footer-content"></footer>
